# compile_time_regexp.h

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_time_regexp.h  compile_time_regexp.hpp  compiletime_regexp.hpp
.github/workflows/: tests.yml
example/: CMakeLists.txt  example.cc
tests/: CMakeLists.txt  simple_test.cc  utility_test.cc
